[package]
name = "yap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
home = "0.5.4"
ring = { version = "0.16.20", features = ["std"] }
serde = { version = "1.0.151", features = ["derive"] }
serde_yaml = "0.9.14"
thiserror = "1.0.37"
